--- a/templates/pdf/user_yourheatx/quote_for_pdf.html
+++ b/templates/pdf/user_yourheatx/quote_for_pdf.html
@@ -123,7 +123,7 @@
                         <span class="credit-value">£{{form_data.9.total_cost|floatformat:2}}</span>
                     </div>
                     <div class="credit-row">
-                        <span class="credit-label">DEPOSIT</span>
+                        <span class="credit-label">DEPOSIT (optional)</span>
                         <span class="credit-value">£{{ form_data.9.deposit_amount|floatformat:2 }}</span>
                     </div>
                     <div class="credit-row">
