included logic for "include interest free option" to quote_for_pdf.html

--- a/templates/pdf/user_yourheatx/quote_for_pdf.html
+++ b/templates/pdf/user_yourheatx/quote_for_pdf.html
@@ -156,6 +156,8 @@
                     </div>
                 </div>
 
+                {% if form_data.9.include_interest_free_option %}
+
                 <!-- 12 Month Example Credit Box -->
                 <div class="credit-box">
                     <div class="title-bar">12 MONTH | EXAMPLE</div>
@@ -197,6 +199,7 @@
                         <span class="credit-value">£0.00</span>
                     </div>
                 </div>
+                {% endif %}
             </div>
         </div>
 
