AMEX removed from Quote for PDF

--- a/templates/pdf/user_yourheatx/quote_for_pdf.html
+++ b/templates/pdf/user_yourheatx/quote_for_pdf.html
@@ -1118,7 +1118,7 @@
                                 <br>
                                 <p class="account-details">Sort Code: 60-83-71</p>
                                 <br>
-                                <p class="account-details">All major debit and credit cards accepted - including AMEX</p>
+                                <p class="account-details">All major debit and credit cards accepted.</p>
 
                             </td>
                         </tr>
